# minecommit

./: AGENT.md  Cargo.toml  README-CN.md  README.md
.github/workflows/: release.yml
minecommit-cli/: Cargo.toml  main.rs
minecommit-gui/: tsconfig.json
minecommit-gui-frontend/: package-lock.json  package.json
minecommit-gui/src/: main.tsx
minecommit-gui/src-tauri/: Cargo.toml
minecommit-gui/src-tauri/src/: lib.rs
minecommit-gui/src/components/: activity-graph.tsx  app-sidebar.tsx  log-viewer.tsx  rolling-log.tsx
minecommit-gui/src/components/unlumen-ui/: dock.tsx
minecommit-gui/src/contexts/: commit-author-context.tsx  commit-author.ts  saves-context.tsx  saves.ts
minecommit-gui/src/pages/: SaveManagePage.tsx  home.tsx  save-manage.tsx  settings.tsx
minecommit/src/handler/: entities_region.rs  poi_region.rs
minecommit/src/handler/chunk_region/: mapping.rs  mod.rs  nbt.rs  palette.rs
minecommit/src/odb/: fs.rs
src/: main.tsx
src/components/: app-sidebar.tsx  rolling-log.tsx
src/pages/: DashboardPage.tsx  HomePage.tsx
